<resources>
    <string name="app_name">Android_UD3_Tarea3_1</string>
    <string name="it_preferencias">Preferencias</string>
    <string name="it_salir">Salir</string>
    <string name="tv_dificultadLabel">Dificultad elegida</string>
    <string name="tv_baseLabel">Base de Datos</string>
    <string name="title_activity_preferencias">PreferenciasActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="pref_titulo_juego">Juego</string>
    <string name="pref_titulo_bd">Tipo de BD</string>
    <string name="pref_titulo_server">Servidor externo</string>
    <string name="bd_summary_of">Interna SQLite</string>
    <string name="bd_summary_on">Externa SQL, MariaDB</string>
    <string name="bd_title">Base de datos</string>
    <string name="edit_nombreBd">Nombre de la BD</string>
    <string name="edit_ipServer">IP del servidor</string>
    <string name="tv_dificultad_value">No hay un valor seleccionado</string>
    <string name="notSelected">No se ha seleccionado</string>
</resources>